--- a/notebooks/Sample-data-analysis.ipynb
+++ b/notebooks/Sample-data-analysis.ipynb
@@ -4739,9 +4739,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.7 64-bit ('tsfresh': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python37764bittsfreshcondae79e6058ffaf4c17bd6ddb4945106d0a"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4753,7 +4753,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.7-final"
   }
  },
  "nbformat": 4,
