--- a/reports/draft_report.tex
+++ b/reports/draft_report.tex
@@ -206,7 +206,7 @@
 \ifCLASSINFOpdf
   \usepackage[pdftex]{graphicx}
   % declare the path(s) where your graphic files are
-  \graphicspath{{./media/}}
+  \graphicspath{{./figures/}}
   % and their extensions so you won't have to specify these with
   % every instance of \includegraphics
   \DeclareGraphicsExtensions{.pdf,.jpeg,.png,.svg,.pdf_tex}
